--- a/style.css
+++ b/style.css
@@ -18,8 +18,10 @@ html, body {
   height: 100%;
   background: black;
   z-index: 0;
+  overflow: hidden;
 }
 
+/* Bintang-bintang berkedip */
 .stars {
   width: 100%;
   height: 100%;
@@ -42,6 +44,11 @@ html, body {
   position: absolute;
   pointer-events: none;
   z-index: 0;
+}
+
+@keyframes twinkle {
+  0% { opacity: 0.3; }
+  100% { opacity: 1; }
 }
 
 @keyframes twinkle {
