--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* Reset */
 * {
   margin: 0;
   padding: 0;
@@ -49,9 +50,10 @@ html, body {
   100% { opacity: 1; }
 }
 
+/* Judul */
 .title {
   position: absolute;
-  top: 20vh;
+  top: 10vh;
   left: 50%;
   transform: translateX(-50%);
   width: 90%;
@@ -65,28 +67,57 @@ html, body {
   gap: 0.3rem;
 }
 
+/* Tombol */
 .btn-container {
   position: absolute;
   top: 60vh;
   width: 100%;
   display: flex;
   justify-content: center;
-  gap: 1rem;
   z-index: 3;
   flex-wrap: wrap;
 }
 
-button {
-  padding: 0.7rem 1.5rem;
-  font-size: 1rem;
+.btn {
   border: none;
-  border-radius: 10px;
-  background-color: #5d9bff;
-  color: white;
+  width: 15em;
+  height: 5em;
+  border-radius: 3em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+  background: #1C1A1C;
   cursor: pointer;
-  transition: background 0.3s ease;
+  transition: all 450ms ease-in-out;
+  text-decoration: none;
 }
 
-button:hover {
-  background-color: #4175c6;
+.sparkle {
+  fill: #AAAAAA;
+  transition: all 800ms ease;
+}
+
+.text {
+  font-weight: 600;
+  color: #AAAAAA;
+  font-size: medium;
+}
+
+.btn:hover {
+  background: linear-gradient(0deg, #A47CF3, #683FEA);
+  box-shadow: inset 0px 1px 0px 0px rgba(255, 255, 255, 0.4),
+              inset 0px -4px 0px 0px rgba(0, 0, 0, 0.2),
+              0px 0px 0px 4px rgba(255, 255, 255, 0.2),
+              0px 0px 180px 0px #9917FF;
+  transform: translateY(-2px);
+}
+
+.btn:hover .text {
+  color: white;
+}
+
+.btn:hover .sparkle {
+  fill: white;
+  transform: scale(1.2);
 }
